stderr
ChristmasSongTest.java:177: error: cannot find symbol
            poem.append(new StringBuilder(createWholeVerse(i)));
                                          ^
  symbol:   method createWholeVerse(int)
  location: class ChristmasSongTest
1 error
